2010-09-20  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* cisco.ios.cbqos.xml: implemented nodeid (only for CM summarries)

	* DevDiscover/CiscoIOS_cbQoS.pm: implemented node-display-name

2009-08-16  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* As of IOS 12.2(33)SRD1 and 12.2(33)SRD2, the object indexes
	are no longer unique across the whole router, but only within
	the policy map. The patch adapts the discovery module and collector
	to this change.

2008-08-05  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* NEWS: Plugin release 1.6

2008-04-20  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* Patch from Andrey Rouskol <arouskol@gldn.net>, allowing to use
	the same child policy name in several places inside a policy map.
	The configuration has to be re-discovered and re-compiled
	after installing the new version of plugin. The old QoS stats would 
        be lost after the upgrade.

2007-11-09  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* DevDiscover/CiscoIOS_cbQoS.pm (buildChildrenConfigs):
	interfaces are filtered by $interface->{'excluded'}

2007-08-03  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* NEWS: Plugin release 1.5

2007-04-12  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* DevDiscover/CiscoIOS_cbQoS.pm:
	Added search capability. The policy map entries copy the comment from
	the interface.

2007-01-25  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* NEWS: Plugin release 1.4

2007-01-12  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* DevDiscover/CiscoIOS_cbQoS.pm:
	Added a stub support for vlanPort interface type

2006-02-24  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* Collector/Cisco_cbQoS.pm: cbQosEntityIndex and cbQosVlanIndex
	added to the list of known OIDs, but ignored for now.

2005-07-28  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* NEWS: Plugin release 1.2
