@@ -1,3 +1,8 @@
+2011-04-09  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* perllib/Torrus/Collector/SNMP.pm: API change: replaced getHostname()
+	with getHostHash()
+
 2011-03-22  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* perllib/Torrus/DevDiscover/RFC2790_HOST_RESOURCES.pm:
